[package]
name = "nssi"
version = "0.1.7"
edition = "2021"
rust-version = "1.65"
authors = ["noshishi"]
readme = "README.md"
description = "Git-like Command Line Interface"
repository = "https://github.com/nopeNoshishi/nss"
license = "MIT"
categories = ["command-line-utilities"]
exclude = ["/picture", ".*", "/how_to_make"]
include = ["/src"]
publish = true

[badges]
github = { repository = "nopeNoshishi/nss", workflow = "Rust" }

[dependencies]
anyhow = "1"
byteorder = "1.4.3"
clap = "4.0.32"
colored = "2"
dirs = "4.0.0"
flate2 = "1.0.25"
sha-1 = "0.9.1"
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
testdir = "0.7.3"